# engy

./: .dockerignore  .env.validator.example  README.md  pyproject.toml
.github/workflows/: build-validator.yml
benchmark/: cli.py  prompts.py  runner.py  stats.py
docker/: Dockerfile.validator  docker-compose.validator-dev.yml  docker-compose.validator-staging.yml  docker-compose.validator.yml  entrypoint-validator.sh
docs/: ANNOUNCEMENT.md  MINER.md  SN53_ONE_PAGER.md  VALIDATOR.md
docs/superpowers/plans/: 2026-07-21-weight-resubmit-scheduling.md
docs/superpowers/specs/: 2026-07-18-provider-endpoint-design.md  2026-07-21-weight-resubmit-scheduling-design.md
engy_sn53/: chain.py  sync.py  validator.py
miner/: engy_miner.py  sitecustomize.py
specs/glm-5.2-fp8/: README.md
specs/glm-5.2-nvfp4/: README.md
specs/qwen3.6-35b-fp8/: README.md
tests/: test_bench_cli.py  test_bench_prompts.py  test_bench_runner.py  test_bench_stats.py  test_chain.py  test_heartbeat.py  test_schedule.py  test_state.py  test_sync.py  test_validator.py
validator/: chain.py  heartbeat.py  schedule.py  state.py  sync.py  validator.py
