[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engy-sn53"
version = "0.1.0"
description = "engy Bittensor subnet 53 — light validator (and, later, the open miner)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "substrate-interface>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
chain = ["bittensor>=9.0"]

[project.scripts]
engy-sn53-validator = "validator.validator:main"

[tool.hatch.build.targets.wheel]
packages = ["validator"]
