[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engy-sn53"
version = "0.3.1"
description = "engy Bittensor subnet 53 — light validator (and, later, the open miner)"
requires-python = ">=3.11"
# Upper bounds are deliberate. Validators auto-update from `:latest` within
# minutes of a CI build, so an unbounded range means one upstream major release
# can break every validator on the subnet at once, with no human in the loop.
# Raise these bounds intentionally, after the staging soak.
dependencies = [
    "httpx>=0.27,<1",
    "substrate-interface>=1.7,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]
chain = ["bittensor>=9.0,<10"]

[project.scripts]
engy-sn53-validator = "validator.validator:main"
engy-sn53-health = "validator.validator:healthcheck"

[tool.hatch.build.targets.wheel]
packages = ["validator"]
